--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,11 +1,11 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 26
+    compileSdkVersion 27
     defaultConfig {
         applicationId "etu.polytech.gip"
         minSdkVersion 21
-        targetSdkVersion 26
+        targetSdkVersion 27
         versionCode 1
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
@@ -26,13 +26,30 @@ configurations.all {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'com.android.support:appcompat-v7:26.1.0'
-    implementation 'com.android.support:design:26.1.0'
+    //noinspection GradleCompatible
+    implementation 'com.android.support:appcompat-v7:27.1.1'
+    implementation 'com.android.support:design:27.1.1'
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-   //androidTestCompile 'com.android.support:support-annotations:27.1.1'
-    //noinspection GradleCompatible
-    compile 'com.google.firebase:firebase-core:15.0.2'
+
+    //firebase dependencies
+    implementation "com.google.firebase:firebase-database:15.0.1"
+    implementation 'com.google.firebase:firebase-core:15.0.2'
+    implementation 'com.google.firebase:firebase-firestore:16.0.0'
+    implementation 'com.google.firebase:firebase-crash:15.0.2'
+    implementation 'com.google.firebase:firebase-auth:15.1.0'
+
+    //firebaseUI pre-built ui
+    implementation 'com.firebaseui:firebase-ui:3.3.1'
+    implementation 'com.firebaseui:firebase-ui-auth:3.3.1'
+    implementation 'com.firebaseui:firebase-ui-database:3.3.1'
+    implementation 'com.firebaseui:firebase-ui-firestore:3.3.1'
+    implementation 'com.firebaseui:firebase-ui-storage:3.3.1'
+
+    implementation 'com.facebook.android:facebook-android-sdk:4.33.0'
+    implementation 'com.google.android.gms:play-services-auth:15.0.1'
+
 }
 apply plugin: 'com.google.gms.google-services'
