--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,6 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 27
     defaultConfig {
+        multiDexEnabled  true
         applicationId "etu.polytech.gip"
         minSdkVersion 21
         targetSdkVersion 27
