--- a/app/build.gradle
+++ b/app/build.gradle
@@ -58,6 +58,7 @@ dependencies {
     // Used in FacebookLoginActivity.
     implementation 'com.facebook.android:facebook-login:4.33.0'
     implementation 'com.android.support:customtabs:27.1.1'
+    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
 
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     androidTestImplementation 'com.android.support.test:rules:1.0.2'
